@@ -714,6 +714,9 @@ BUGFIXES:
   ZOOKEEPER-1972. Fix invalid volatile long/int increment (++)
   (Hongchao Deng via phunt)
 
+  ZOOKEEPER-1973. Jetty Server changes broke ibm6 support
+  (Bill Havanki via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
